kubernetes/media/bazarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve2
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: bazarr
        image: ghcr.io/home-operations/bazarr:1.5.3
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr
      - name: media
        persistentVolumeClaim:
          claimName: media
