kubernetes/media/bazarr/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [ pve2 ]
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: bazarr
        image: ghcr.io/home-operations/bazarr:1.5.3
        livenessProbe:
          httpGet:
            path: /api/system/ping
            port: 6767
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: proxmox
      resources:
        requests:
          storage: 1Gi
