kubernetes/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  clusterIP: None
  selector:
    app: bazarr
  ports:
  - port: 80
    targetPort: 6767
